# network-labs

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
labs/simple-nxos-lab/: README.md  dump.sql
labs/simple-nxos-lab/config/: LAP2.conf  SW1.conf  SW2.conf
labs/simple-nxos-lab/netbox/: dump.sql
scripts/: README.md  expect.py  nornir-test.py
scripts/gns3-aws/: README.md
scripts/gns3-aws/packer/: config.pkr.hcl  install-gns3-server.sh
scripts/gns3-aws/terraform/: main.tf  variables.tf
scripts/netbox-psql/: README.md  clear.sql  dump.sh  restore.sh
scripts/netbox-to-gns3/: README.md  nb2gns3.py
scripts/packer/: README.md  config.pkr.hcl  install.sh  variables.pkr.hcl
scripts/telnetmiko/: base.py  nxos.py  vyos.py
scripts/terraform/: README.md  main.tf  variables.tf
scripts/vagrant/: README.md  Vagrantfile
tests/telnetmiko/: test_nxos.py  test_vyos.py
