[tool.poetry]
name = "network-labs"
version = "0.1.0"
description = ""
authors = ["Olivier Desnoë <olivier@albatross-networks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
logzero = "^1.7.0"
click = "^8.0.3"
gns3-client = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
